# rust-maker-sdk

./: Cargo.toml  LICENSE
rust-maker-sdk/: CHANGELOG.md  Cargo.toml  README.md
rust-maker-sdk/examples/: discovery.rs  hello_auth.rs  indicative.rs  managed_quote.rs  quote.rs
rust-maker-sdk/src/: error.rs  lib.rs  nonce.rs  nonce_tests.rs  wire.rs
rust-maker-sdk/src/chain/: ix.rs  mod.rs  rpc.rs
rust-maker-sdk/src/orders/: mod.rs
rust-maker-sdk/src/types/: errors.rs  ids.rs  macros.rs  messages.rs  mod.rs
rust-maker-sdk/src/ws/: client.rs  error.rs  managed_tests.rs  mod.rs  reconnect.rs
rust-maker-sdk/src/ws/managed/: mod.rs  session.rs  tracker.rs
rust-maker-sdk/src/ws/types/: client.rs  common.rs  market.rs  mod.rs
rust-maker-sdk/src/ws/types/server/: mod.rs  server_auth.rs  server_query.rs  server_quote.rs  server_rfq.rs
rust-maker-sdk/tests/: chain_ix.rs  orders.rs  reconnect.rs  wire.rs  ws_json.rs
