[workspace]
resolver = "2"
members = ["rust-maker-sdk"]

[workspace.dependencies]
acta-maker-sdk = { version = "0.1.0-beta.1", path = "rust-maker-sdk" }

bs58 = "0.5"
derive_more = { version = "2.1", features = ["display", "from", "into", "deref"] }
ed25519-dalek = { version = "2", features = ["zeroize"] }
futures-util = "0.3"
hex = "0.4"
proptest = "1"
rand = "0.9"
rand_xoshiro = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.16.1", features = ["macros"] }
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = "1"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.perf]
inherits = "release"
opt-level = 3
lto = "thin"
debug = 1
strip = false
